fixed white space when tablt menu clicked

--- a/css/core-styles.css
+++ b/css/core-styles.css
@@ -23,6 +23,7 @@ body, html {
 
 html.clicked {
     position: fixed;
+    width: 100%;
 }
 
 p {
